Minor logging issues